--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer {
     margin-top: auto;
-    background-color: rgb(228, 228, 126);
+    background-color: #EAD6CD;
     text-align: center;
 }
