--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,6 +1,26 @@
+ul {
+    list-style: none;
+}
+
+li {
+    margin: 15px 0;
+}
+
 .main {
     display: flex;
     flex-direction: column;
+    /* align-items: center; */
+    justify-content: center;
     text-align: center;
     margin-top: 2%;
+}
+
+.assumptions {
+    margin: 20px 200px;
+}
+
+.results {
+    text-align: center;
+    background-color: #1abc9c;
+    margin: 20px 200px;
 }
